# RunGirl

./: CMakeLists.txt
Classes/: ActionCtl.cpp  ActionCtl.h  AppDelegate.cpp  AppDelegate.h  CameraCtl.cpp  CameraCtl.h  CheckCollision.cpp  CheckCollision.h  CheckKey.cpp  CheckKey.h  CheckList.cpp  CheckList.h  EnemyCreate.cpp  EnemyCreate.h  GameScene.cpp  GameScene.h  Glass.cpp  Glass.h  ItemCreate.cpp  ItemCreate.h  ItemGenerate.cpp  ItemGenerate.h  MapCreate.cpp  MapCreate.h  ResultScene.cpp  ResultScene.h  Score.cpp  Score.h  StageObjCreate.cpp  StageObjCreate.h  TitleScene.cpp  TitleScene.h  actData.cpp  actData.h  actModule.cpp  actModule.h
Classes/Animation/: AnimCtl.cpp  AnimCtl.h
Classes/cricket-1.6.7/src/samples/hellocricket/win/: hellocricket_vs2017.vcxproj
Classes/cricket-1.6.7/src/samples/hellocricket/win/DebugDynamic/: hellocricket_vs2017.ilk  vc141.idb
Classes/cricket-1.6.7/src/samples/hellocricket/win/DebugDynamic/hellocri.4163B309.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hellocricket_vs2017.lastbuildstate  link.command.1.tlog  link.read.2.tlog  link.write.1.tlog
Classes/cricket-1.6.7/src/samples/hellocricket/win/DebugStatic/: hellocricket_vs2017.ilk  vc141.idb
Classes/cricket-1.6.7/src/samples/hellocricket/win/DebugStatic/hellocri.4163B309.tlog/: CL.command.1.tlog  CL.write.1.tlog  hellocricket_vs2017.lastbuildstate  link.command.1.tlog  link.read.2.tlog  link.write.1.tlog
Classes/cricket-1.6.7/src/samples/hellocricket/win/x64/DebugDynamic/: hellocricket_vs2017.ilk  vc141.idb
Classes/cricket-1.6.7/src/samples/hellocricket/win/x64/DebugDynamic/hellocri.4163B309.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hellocricket_vs2017.lastbuildstate  link.command.1.tlog  link.read.2.tlog  link.write.1.tlog
Classes/effect/: EffectMng.cpp  EffectMng.h  Effekseer.cpp
Classes/effect/Players/Cocos2d-x_v3/: Effekseer.h
Classes/input/: OPRT_Enemy.cpp  OPRT_Enemy.h  OPRT_Key.cpp  OPRT_Key.h  OPRT_State.h  OPRT_Touch.cpp  OPRT_Touch.h
Classes/item/: FxGlow.cpp  FxGlow.h  HpItem.cpp  HpItem.h  Item.h  NormalItem.cpp  NormalItem.h  PointUpItem.cpp  PointUpItem.h  SpeedUpItem.cpp  SpeedUpItem.h
Classes/move/: AttackMove.cpp  AttackMove.h  EnemyLR.cpp  EnemyLR.h  FallMove.cpp  FallMove.h  Falling.cpp  Falling.h  JumpMove.cpp  JumpMove.h  Jumping.cpp  Jumping.h  MoveLR.cpp  MoveLR.h
Classes/sound/: SoundMng.cpp  SoundMng.h  SoundSafeRelese.h
Classes/ui/: Attack.cpp  Attack.h  BackScroll.cpp  BackScroll.h  CountDown.cpp  CountDown.h  TimerMng.cpp  TimerMng.h  TitleNameMove.cpp  TitleNameMove.h  clickUI.cpp  clickUI.h
Resources/effect/: starTap.efk  wind.efk  wind2.efk
Resources/image/Environment/: mapA.tmx  mapB.tmx  mapC.tmx  mapD.tmx  mapE.tmx  mapF.tmx  mapG.tmx  mapH.tmx  mapI.tmx  mapJ.tmx  mapK.tmx  mapL.tmx  school.tsx  test.tmx  test2.tmx  tileset_stage2.tsx  tilesets.tsx  tilesets_2.tsx
Resources/image/Sprites/Fx/Fx-glow/: sprites.plist
Resources/image/Sprites/Fx/Fx-impact/: sprites.plist
Resources/image/Sprites/Fx/Fx-shot/: sprites.plist
Resources/image/Sprites/enemy/enemy-jump/: sprites.plist
Resources/image/Sprites/enemy/enemy-run/: sprites.plist
Resources/image/Sprites/glass/glass-move/: sprites.plist
Resources/image/Sprites/player/player-attack/: sprites.plist
Resources/image/Sprites/player/player-attack2/: sprites.plist
Resources/image/Sprites/player/player-dash-a/: sprites.plist
Resources/image/Sprites/player/player-dash-b/: sprites.plist
Resources/image/Sprites/player/player-idle/: sprites.plist
Resources/image/Sprites/player/player-jump/: sprites.plist
Resources/image/Sprites/player/player-kick/: sprites.plist
Resources/image/Sprites/player/player-kick2/: sprites.plist
Resources/image/Sprites/player/player-run/: sprites.plist
Resources/image/Sprites/player/player-run-slow/: sprites.plist
Resources/image/Sprites/player/player-run2/: sprites.plist
Resources/image/Sprites/player/player-walk/: sprites.plist
Resources/sound/: die.ckb  enemy_die.ckb  jump.ckb  jump2.ckb
proj.android/: gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.win32/: DisplayUI.cpp  DisplayUI.h  GhostTown.sln  GhostTown.vcxproj  GhostTown.vcxproj.filters  RunGirl.sln  RunGirl.vcxproj  RunGirl.vcxproj.filters
proj.win32/Debug.win32/: GhostTown.lib
